--- a/proj_1.ipynb
+++ b/proj_1.ipynb
@@ -811,10 +811,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# drop_na_df = transit_renamed_df.dropna(how='any')\n",
+    "drop_na_df = split_transit_df.dropna(how='any')\n",
     "# works but completely removes the rows with an Na but not the dashes\n",
-    "#drop_na_df.count() # shows all columns have 189 rows  dtype: int64\n",
-    "#drop_na_df.head() # shows the deletion of Dhaka  (previous row 6)"
+    "drop_na_df.count() # shows all columns have 189 rows  dtype: int64\n",
+    "drop_na_df.head(10) # shows the deletion of Dhaka  (previous row 6)\n",
+    "\n"
    ]
   },
   {
@@ -1314,7 +1315,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#bar plot top 20 number of passenger subway systems by country  with color of bar by country    E"
+    "#bar plot top 20 number of passenger subway systems by country  with color of bar by country    E\n",
+    "# total number of subway riders by country\n",
+    "country_total_ridership = split_transit_df.groupby('Country region')['Annual ridership (millions)'].sum()\n",
+    "#country_total_ridership\n",
+    "top_20_country_total_ridership = country_total_ridership.sort_values(ascending=False).head(20)\n",
+    "top_20_country_total_ridership.head(20)"
    ]
   },
   {
@@ -1372,7 +1378,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.10.12"
   },
   "orig_nbformat": 4
  },
